tests/unit/default/syntax-error/019-create-table-parens-name-colon.e.t
---- IN ----
+%table(id:
---- OUT ----
---- ERR ----
syntax: expected <name> after `+%table(id:` instead of EOL at position 11 - at line 1
---- EXIT ----
1
